--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="title_activity_categories_item">Categories_item</string>
     <string name="app_label">Search</string>
     <string name="search_hint">Search</string>
+    <string name="no_data_available">No result found</string>
 </resources>
